# Multilingual-Absa

./: .env.example  .env.railway  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY_AUDIT.md  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  pyproject.toml  railway.json  reorganize.sh  requirements.txt  test.db
.claude/: AGENTS.md
.github/workflows/: ci.yml  deploy.yml  drift_check.yml
.opencode/: gsd-file-manifest.json  gsd-install-state.json  opencode.json
.opencode/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  (+11 more)
.planning/: ROADMAP.md  STATE.md  config.json
api/: main.py
app/: main.py
dashboard/: index.html  vercel.json
dashboard_backup/: index.html  package-lock.json  package.json  tailwind.config.js
data/: raw.dvc
docker/: Dockerfile  Dockerfile.api  Dockerfile.dashboard  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  nginx.dashboard.conf
docs/: API_DOCUMENTATION.md  DATABASE.md  DEPLOYMENT.md  HTMX_MIGRATION.md  SECURITY.md  SYSTEM_DESIGN.md  TECH_STACK.md  architecture.md  demo_script.md  linkedin_post.md  resume_bullets.md
monitoring/: prometheus.yml
notebooks/: 01_data_exploration.ipynb  03_model_comparison.ipynb  03_train_colab.ipynb
scripts/: download_data.py  drift_monitor.py  generate_notebooks.py  init_db.py  mlflow_ui.sh  upload_models.py
src/: config.py
streamlit_app/: Home.py
tests/: test_api.py  test_bio_tagger.py
(+356 files in other folders)
