[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "multilingual-absa"
version = "2.0.0"
description = "Multilingual Aspect-Based Sentiment Analysis for English, Hindi, and Hinglish"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["absa", "sentiment-analysis", "nlp", "multilingual", "fastapi", "hindi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.coverage.run]
source = ["app", "absa"]
omit = ["*/tests/*", "*/__pycache__/*"]
